Fixed modal background position when scrollbar is present

--- a/app/warpg/src/scss/index.scss
+++ b/app/warpg/src/scss/index.scss
@@ -44,6 +44,8 @@ button {
     position: fixed;
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
     align-items: center;
     justify-content: center;
     background: rgba(0, 0, 0, 0.8);
